# jnidemo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xingkong/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.cpp  base.h  jvm.cpp  jvm.h
app/src/main/cpp/jni/: jni_access_field.cpp  jni_basic_type.cpp  jni_bitmap.cpp  jni_exception.cpp  jni_invoke_method.cpp  jni_onload.cpp  jni_product_and_consumer_thread.cpp  jni_reference.cpp  jni_reference_type.cpp  jni_string.cpp  jni_thread.cpp  jni_wait_thread.cpp
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/java/com/xingkong/myapplication/: MainActivity.java
app/src/main/java/com/xingkong/myapplication/jni/: BaseOperation.java  JNIAccessField.java  JNIBasicType.java  JNIBitmap.java  JNIDynamicLoad.java  JNIException.java  JNIInvokeMethod.java  JNIProductAndConsumerThread.java  JNIReference.java  JNIReferenceType.java  JNIString.java  JNIThread.java  JNIWaitNotify.java
app/src/main/java/com/xingkong/myapplication/model/: Animal.java  Cat.java
app/src/main/java/com/xingkong/myapplication/thread/: ICallbackMethod.java  IThreadCallback.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/xingkong/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
